Set up html content

--- a/index.html
+++ b/index.html
@@ -19,5 +19,180 @@
 		<link rel="stylesheet" href="/style.css" />
 		<script src="/main.js" defer></script>
 	</head>
-	<body></body>
+	<body>
+		<header>
+			<div class="container">
+				<a href="#"><img src="" alt="Varga Csilla" /></a>
+				<nav>
+					<ul aria-label="navigation" class="nav-list">
+						<li><a href="#">Miben tudok segíteni</a></li>
+						<li><a href="#">Árak</a></li>
+						<li><a href="#">Rólam</a></li>
+						<li><a href="#">Kapcsolat</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+
+		<main>
+			<section>
+				<div class="container home">
+					<div class="home-left">
+						<h1>Varga Csilla vagyok,</h1>
+						<h2>okleveles pszichológus</h2>
+						<p>
+							Munkám során alapelveimnek tartom a feltétel nélküli elfogadást, a
+							kedvességet és az empátiát. Arra törekszem, hogy olyan biztonságos
+							légkört teremtsek, ahol klienseim őszintén mernek beszélni
+							nehézségeikről. A tanácsadás során a klienssel egyenrangú
+							partnerekként közösen dolgozunk a cél elérése érdekében. A fókuszt
+							az erőforrások feltárására és mozgósítására helyezem, melynek
+							segítségével képessé válnak problémáik, konfliktusaik, elakadásaik
+							megoldására, nehéz döntések meghozatalára.
+						</p>
+						<a href="#" class="scroll-call">görgess lejjebb</a>
+					</div>
+					<div class="home-right">
+						<img
+							src="/resources/women-in-chair.jpg"
+							alt="Varga Csilla ül egy fotelban"
+						/>
+					</div>
+				</div>
+			</section>
+
+			<section>
+				<div class="container services">
+					<div class="services-left">
+						<h2>Milyen problémákkal fordulhat hozzám?</h2>
+						<ul aria-label="services" class="service-list">
+							<li>önismeret fejlesztése</li>
+							<li>stresszkezelés, szorongás</li>
+							<li>konfliktushelyzetek kezelése</li>
+							<li>életvezetési elakadások</li>
+							<li>kapcsolati problémák</li>
+							<li>önértékelési problémák</li>
+						</ul>
+						<h2>Pszichológiai tanácsadás menete</h2>
+						<p>
+							Az első egy-két alkalom az ismerkedésről, a problémák
+							feltárásáról, célok megfogalmazásáról szól. Ezt követően egy
+							úgynevezett szerződést kötünk, melyben rögzítjük az elérni kívánt
+							célt, a konzultációk gyakoriságát, árát, illetve a lemondás
+							körülményeit.
+						</p>
+					</div>
+
+					<div class="services-right">
+						<p>Árak</p>
+						<ul aria-label="prices" class="price-list">
+							<li><span>Alapár</span>12000 Ft/50 perc</li>
+							<li><span>Diákoknak</span>9000 Ft/50 perc</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+
+			<section>
+				<div class="container about">
+					<div class="about-left">
+						<img src="/resources/women.jpg" alt="Varga Csilla" />
+					</div>
+
+					<div class="about-right">
+						<div class="experience">
+							<h2>Szakmai tapasztalat</h2>
+
+							<h3>Pszichológus (2022 -)</h3>
+							<p>Mindset Terápiás & Tanácsadó Központ</p>
+
+							<h3>“Brain trainer” (2022 -)</h3>
+							<p>GEM Tanulási Központ</p>
+
+							<h3>Pszichológus (2020 - 2022)</h3>
+							<p>
+								Tolna Megyei Pedagógiai Szakszolgálat Dombóvári Tagintézménye
+							</p>
+
+							<h3>Pszichológus (2022)</h3>
+							<p>Somogy Megyei Pedagógiai Szakszolgálat Barcsi Tagintézménye</p>
+						</div>
+						<div class="studies">
+							<h2>Tanulmányaim</h2>
+							<p><span>Tanácsadó szakpszichológus (2021-),</span> ELTE</p>
+							<p>
+								<span>
+									Pszichológia MA (kognitív pszichológia szakirány, 2019),
+								</span>
+								Pécsi Tudományegyetem
+							</p>
+							<p>
+								<span>Pszichológia BA (viselkedéselemző, 2017),</span> Pécsi
+								Tudományegyetem
+							</p>
+						</div>
+						<div class="studies">
+							<h2>Továbbképzések</h2>
+							<p>
+								<span>
+									A szorongásos zavarok kezelési lehetőségei gyermekkorban
+									(2021),
+								</span>
+								Vadaskert Alapítvány
+							</p>
+							<p>
+								<span> VILÁGJÁTÉK (2021), </span>
+								Polcz Alaine Alapítvány
+							</p>
+							<p>
+								<span> Rajzelemzés lépésről lépésre (2020), </span> Rajzelemzési
+								Intézet
+							</p>
+							<p><span> Tanulástechnika (2019), </span> Vadaskert Alapítvány</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section>
+				<div class="container contact">
+					<div class="contact-left">
+						<h2>Elérhetőségek</h2>
+						<ul aria-label="contacts" class="contact-list">
+							<li><span> Telefon </span> +36 00 000 0000</li>
+							<li><span> Email </span> notrealemail@really.com</li>
+							<li>
+								<span> Személyesen </span> Some nice office, Budapest 0000, That
+								Str. 00
+							</li>
+						</ul>
+					</div>
+					<div class="contact-right">
+						<div class="form-container">
+							<form action="" method="post">
+								<ul>
+									<li>
+										<label for="name">Név:</label>
+										<input type="text" id="name" name="user_name" />
+									</li>
+									<li>
+										<label for="mail">Email:</label>
+										<input type="email" id="mail" name="user_email" />
+									</li>
+									<li>
+										<label for="message">Üzenet:</label>
+										<textarea id="message" name="user_message"></textarea>
+										<p>(A probléma rövid leírása.)</p>
+									</li>
+									<li><button type="submit">Küldés</button></li>
+								</ul>
+							</form>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
+
+		<footer><p>2022, Designed and Built by Dudli Tibor</p></footer>
+	</body>
 </html>
