--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 			rel="stylesheet"
 		/>
 
-		<link rel="stylesheet" href="/style.css" />
-		<script src="/main.js" defer></script>
+		<link rel="stylesheet" href="style.css" />
+		<script src="main.js" defer></script>
 	</head>
 
 	<body>
 		<header>
 			<div class="container">
 				<a id="navLink" href="#home"
-					><img src="/resources/logo2.png" alt="Varga Csilla" class="logo"
+					><img src="resources/logo2.png" alt="Varga Csilla" class="logo"
 				/></a>
 
 				<input id="checkbox" type="checkbox" class="toggler" />
@@ -63,7 +63,7 @@
 
 					<div class="home-right">
 						<img
-							src="/resources/women-in-chair.jpg"
+							src="resources/women-in-chair.jpg"
 							alt="Varga Csilla ül egy fotelban"
 						/>
 					</div>
