--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			<section id="about">
 				<div class="container about">
 					<div class="about-left">
-						<img src="/resources/women.jpg" alt="Varga Csilla" />
+						<img src="resources/women.jpg" alt="Varga Csilla" />
 					</div>
 
 					<div class="about-right">
