--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<header>
 			<div class="container">
 				<a id="navLink" href="#home"
-					><img src="resources/logo2.png" alt="Varga Csilla" class="logo"
+					><img src="resources/logo.png" alt="Varga Csilla" class="logo"
 				/></a>
 
 				<input id="checkbox" type="checkbox" class="toggler" />
