Fix id problem on the nav links

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<a id="navLink" href="#home"
+				<a class="navLink" href="#home"
 					><img src="resources/logo.png" alt="Varga Csilla" class="logo"
 				/></a>
 
@@ -31,10 +31,12 @@
 				<div class="hamburger"><div></div></div>
 				<nav>
 					<ul aria-label="navigation" class="nav-list">
-						<li><a id="navLink" href="#services">Miben tudok segíteni</a></li>
-						<li><a id="navLink" href="#prices">Árak</a></li>
-						<li><a id="navLink" href="#about">Rólam</a></li>
-						<li><a id="navLink" href="#contact">Kapcsolat</a></li>
+						<li>
+							<a class="navLink" href="#services">Miben tudok segíteni</a>
+						</li>
+						<li><a class="navLink" href="#prices">Árak</a></li>
+						<li><a class="navLink" href="#about">Rólam</a></li>
+						<li><a class="navLink" href="#contact">Kapcsolat</a></li>
 					</ul>
 				</nav>
 			</div>
